Fix home page ar width, and featured publications overflow

--- a/cigionline/static/css/includes/features/_feature_publication_teaser.scss
+++ b/cigionline/static/css/includes/features/_feature_publication_teaser.scss
@@ -2,9 +2,12 @@ article {
   &.feature-publication-teaser {
     @include media-breakpoint-up(md) {
       border: 1px solid $cigi-medium-grey;
-      height: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       margin-bottom: 0;
       max-width: 300px;
+      min-height: 300px;
       padding: 1em;
       position: relative;
       width: 100%;
@@ -23,64 +26,57 @@ article {
     margin-bottom: 1.5em;
     padding-bottom: 1.5em;
 
-    .feature-publication-teaser-content {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      justify-content: space-between;
+    .feature-publication-teaser-meta {
+      .authors {
+        @include link($color: $cigi-text-grey, $hover-color: $cigi-primary-colour);
+        font-size: 0.75em;
+        margin-bottom: 0;
+        margin-top: 0;
+        text-transform: uppercase;
+      }
 
-      .feature-publication-teaser-meta {
-        .authors {
-          @include link($color: $cigi-text-grey, $hover-color: $cigi-primary-colour);
-          font-size: 0.75em;
-          margin-bottom: 0;
-          margin-top: 0;
-          text-transform: uppercase;
-        }
+      .button-action {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+        font-size: 0.75em;
+        height: 25px;
+        justify-content: center;
+        margin-top: 0.5em;
+        padding: 7px 10px;
+        width: 25px;
 
-        .button-action {
-          align-items: center;
-          display: flex;
-          flex-direction: column;
-          flex-shrink: 0;
-          font-size: 0.75em;
-          height: 25px;
-          justify-content: center;
-          margin-top: 0.5em;
-          padding: 7px 10px;
-          width: 25px;
-
-          &:hover {
-            i {
-              color: $white;
-            }
-          }
-
+        &:hover {
           i {
-            color: $cigi-primary-colour;
-            margin-right: 0;
-            transition: color 0.25s ease;
+            color: $white;
           }
         }
 
-        .date {
-          color: $cigi-text-grey;
-          font-size: 0.75em;
-          text-transform: uppercase;
+        i {
+          color: $cigi-primary-colour;
+          margin-right: 0;
+          transition: color 0.25s ease;
         }
       }
 
-      .feature-publication-teaser-title {
-        h3 {
-          @include link($color: $black, $hover-color: $cigi-primary-colour);
-          font-size: 1.0625em;
-          line-height: 1.45;
-        }
+      .date {
+        color: $cigi-text-grey;
+        font-size: 0.75em;
+        text-transform: uppercase;
+      }
+    }
 
-        .topics {
-          color: $cigi-primary-colour;
-          margin-bottom: 0.5em;
-        }
+    .feature-publication-teaser-title {
+      h3 {
+        @include link($color: $black, $hover-color: $cigi-primary-colour);
+        font-size: 1.0625em;
+        line-height: 1.45;
+      }
+
+      .topics {
+        color: $cigi-primary-colour;
+        margin-bottom: 0.5em;
       }
     }
   }
